Support for multiple extension settings: - client protocol version - boolean to determine if execution is remote